submit functionality of SAVE button in Edit pop-up

--- a/todo/tracker/templates/index.html
+++ b/todo/tracker/templates/index.html
@@ -130,7 +130,8 @@
       }
 
       function alertFunctionEdit() {
-        // TODO
+        var form = document.getElementById("edit-form");
+        form.submit();
       }
     </script>
   </div>
