added edit and delete functionalities

--- a/todo/tracker/static/css/style.css
+++ b/todo/tracker/static/css/style.css
@@ -188,7 +188,7 @@ a.footer-link.active {
 }
 
 /*  ADD SECTION  */
-form {
+#addForm {
     color: #efe9ce;
     padding: 20px;
     background-color: #0d3133;
